--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,11 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_size_large">128dp</dimen>
+    <dimen name="image_size_medium">64dp</dimen>
+    <dimen name="image_size_small">32dp</dimen>
+    <dimen name="text_margin_small">4dp</dimen>
+    <dimen name="text_margin_medium">8dp</dimen>
+    <dimen name="text_margin_large">16dp</dimen>
+    <dimen name="text_size_default">20sp</dimen>
 </resources>
