--- a/app/src/main/res/layout/item_coffee.xml
+++ b/app/src/main/res/layout/item_coffee.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/text_margin_small"
+    android:layout_marginBottom="@dimen/text_margin_small">
 
     <ImageView
         android:layout_width="@dimen/image_size_large"
@@ -31,60 +32,34 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/label_brand"
-                style="@style/item_label"
+                android:id="@+id/value_brand"
+                style="@style/item_base"
+                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:text="@string/brand"
                 android:textAlignment="textStart" />
 
             <TextView
-                android:id="@+id/value_brand"
+                android:id="@+id/value_origin"
                 style="@style/item_base"
+                android:textStyle="italic"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text="@string/placeholder"
+                android:text="@string/origin"
                 android:textAlignment="textEnd" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
-                android:id="@+id/label_name"
-                style="@style/item_label"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="@string/name"
-                android:textAlignment="textStart" />
-
             <TextView
                 android:id="@+id/value_name"
                 style="@style/item_base"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text="@string/placeholder"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/label_origin"
-                style="@style/item_label"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="@string/origin"
+                android:text="@string/name"
                 android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/value_origin"
-                style="@style/item_base"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="@string/placeholder"
-                android:textAlignment="textEnd" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
