--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,9 +9,13 @@
             android:icon="@drawable/ic_14_coffee_bean"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_coffee_bags"
             android:icon="@drawable/ic_20_coffee_bag"
             android:title="@string/menu_coffee_bags" />
+        <item
+            android:id="@+id/nav_gallery"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_24_cup"
