--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         parent="item_base">
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style
+        name="button_base">
+        <item name="android:colorBackground">?attr/colorPrimaryVariant</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">@dimen/text_margin_medium</item>
+    </style>
 </resources>
