--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="anthracite_200">#FF07090B</color>
+    <color name="anthracite_500">#FF12161C</color>
+    <color name="anthracite_700">#FF192027</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_200">#FF80D57B</color>
     <color name="green_500">#FF6EC269</color>
